--- a/Home.html
+++ b/Home.html
@@ -2,7 +2,12 @@
 
 <head>
   <style>
-    body,
+ @font-face {
+  font-family: 'Roboto';
+  src: url('Roboto-Regular.ttf') format('truetype');
+}
+   
+   body,
     h2 {
       margin: 0;
       padding: 0;
@@ -21,10 +26,10 @@
       color: #ffffff;
       text-align: center;
       font-size: 30px;
-      font-family: Arial, Helvetica, sans-serif;
       text-decoration: none;
       margin-right: 20px;
       margin-left: 20px;
+      font-weight: 100;
     }
 
     .cta {
@@ -117,8 +122,9 @@
 <body>
   <div class="topnav">
     <a class="active" href="#home">Home</a>
-    <a href="#over-mij">Over mij</a>
-    <a href="#contact-opnemen">Contact opnemen</a>
+    <a href="#SerenoMini.html">Sereno Mini</a>
+    <a href="#SerenoMax.html">Sereno Max</a>
+    <a href="ContactOpnemen.html"Contact Opnemen"></a>
   </div>
 
   <section class="cta">
